--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>3-1题库-全部题库</title>
+<title>题库</title>
 <link rel="stylesheet" type="text/css" href="theme/1/css/common.css">
 <link rel="stylesheet" type="text/css" href="theme/1/css/style.css">
 <link rel="stylesheet" type="text/css" href="theme/1/css/EditingArea.css">
@@ -26,7 +26,7 @@
 	
 	$(".baseUI li ul li:eq(0)").click(function(){
 		$(".right").load("load/allQuestion.html");
-	});
+    });
 	$(".baseUI li ul:eq(0) li:eq(0)").trigger('click');
   }) 
 </script>
@@ -74,7 +74,7 @@
             </div>
             <div class="right">
             </div>  
-    <div id="foot"><a href="#">上海师悦信息科技有限公司</a></div>
+    <div id="foot"><a href="#">香蕉杀手联盟</a></div>
 </div>
 </body>
 
